Apply Stephen Blackheath's GHC-iPhone patches

--- a/configure.ac
+++ b/configure.ac
@@ -434,6 +434,7 @@ dnl --------------------------------------------------------------
 FIND_GCC([WhatGccIsCalled], [gcc], [gcc])
 CC="$WhatGccIsCalled"
 export CC
+FIND_GCC([WhatLocalGccIsCalled], [local-gcc], [gcc])
 
 dnl ** Which ld to use?
 dnl --------------------------------------------------------------
@@ -541,6 +542,19 @@ FPTOOLS_SET_C_LD_FLAGS([build],[CONF_CC_OPTS_STAGE0],[CONF_GCC_LINKER_OPTS_STAGE
 FPTOOLS_SET_C_LD_FLAGS([target],[CONF_CC_OPTS_STAGE1],[CONF_GCC_LINKER_OPTS_STAGE1],[CONF_LD_LINKER_OPTS_STAGE1],[CONF_CPP_OPTS_STAGE1])
 # Stage 3 won't be supported by cross-compilation
 FPTOOLS_SET_C_LD_FLAGS([target],[CONF_CC_OPTS_STAGE2],[CONF_GCC_LINKER_OPTS_STAGE2],[CONF_LD_LINKER_OPTS_STAGE2],[CONF_CPP_OPTS_STAGE2])
+
+CONF_CC_OPTS_STAGE1="$CONF_CC_OPTS_STAGE1 $TARGET_CFLAGS"
+CONF_CC_OPTS_STAGE2="$CONF_CC_OPTS_STAGE2 $TARGET_CFLAGS"
+CONF_CC_OPTS_STAGE3="$CONF_CC_OPTS_STAGE2 $TARGET_CFLAGS"
+CONF_GCC_LINKER_OPTS_STAGE1="$CONF_CC_OPTS_STAGE1 $TARGET_LDFLAGS"
+CONF_GCC_LINKER_OPTS_STAGE2="$CONF_CC_OPTS_STAGE2 $TARGET_LDFLAGS"
+CONF_GCC_LINKER_OPTS_STAGE3="$CONF_CC_OPTS_STAGE2 $TARGET_LDFLAGS"
+CONF_LD_LINKER_OPTS_STAGE1="$CONF_CC_OPTS_STAGE1 $TARGET_LDFLAGS"
+CONF_LD_LINKER_OPTS_STAGE2="$CONF_CC_OPTS_STAGE2 $TARGET_LDFLAGS"
+CONF_LD_LINKER_OPTS_STAGE3="$CONF_CC_OPTS_STAGE2 $TARGET_LDFLAGS"
+CONF_CPP_OPTS_STAGE1="$CONF_CC_OPTS_STAGE1 $TARGET_CPPFLAGS"
+CONF_CPP_OPTS_STAGE2="$CONF_CC_OPTS_STAGE2 $TARGET_CPPFLAGS"
+CONF_CPP_OPTS_STAGE3="$CONF_CC_OPTS_STAGE2 $TARGET_CPPFLAGS"
 
 FP_GCC_EXTRA_FLAGS
 
