--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -553,6 +553,7 @@ GHC_PACKAGE_DB_FLAG = @GHC_PACKAGE_DB_FLAG@
 # needs to know which gcc you're using in order to perform its tests.
 
 WhatGccIsCalled       = @WhatGccIsCalled@
+WhatLocalGccIsCalled  = @WhatLocalGccIsCalled@
 GccVersion            = @GccVersion@
 AlienScript           = @AlienScript@
 ifeq "$(phase)" "0"
@@ -566,12 +567,12 @@ TargetPlatformFull    = @TargetPlatformFull@
 GccLT34         = @GccLT34@
 GccLT46         = @GccLT46@
 CC              = $(WhatGccIsCalled)
-CC_STAGE0       = @CC_STAGE0@
+CC_STAGE0       = $(WhatLocalGccIsCalled)
 CC_STAGE1       = $(CC)
 CC_STAGE2       = $(CC)
 CC_STAGE3       = $(CC)
 AS              = $(WhatGccIsCalled)
-AS_STAGE0       = @CC_STAGE0@
+AS_STAGE0       = $(WhatLocalGccIsCalled)
 AS_STAGE1       = $(AS)
 AS_STAGE2       = $(AS)
 AS_STAGE3       = $(AS)
@@ -616,12 +617,26 @@ endif
 #     libraries\haskeline\.\System\Console\Haskeline\Backend\Win32.hsc:160
 #     directive "let" is not safe for cross-compilation
 ifneq "$(Windows)" "YES"
-SRC_HSC2HS_OPTS += --cross-safe
+SRC_HSC2HS_OPTS_STAGE0 += --cross-safe
+SRC_HSC2HS_OPTS_STAGE1 += --cross-safe
+SRC_HSC2HS_OPTS_STAGE2 += --cross-safe
 endif
-SRC_HSC2HS_OPTS += $(addprefix --cflag=,$(filter-out -O,$(SRC_CC_OPTS) $(CONF_CC_OPTS_STAGE0)))
-SRC_HSC2HS_OPTS += $(foreach d,$(GMP_INCLUDE_DIRS),-I$(d))
+SRC_HSC2HS_OPTS_STAGE0 += $(addprefix --cflag=,$(filter-out -O,$(SRC_CC_OPTS) $(CONF_CC_OPTS_STAGE0)))
+SRC_HSC2HS_OPTS_STAGE1 += $(addprefix --cflag=,$(filter-out -O,$(SRC_CC_OPTS) $(CONF_CC_OPTS_STAGE1)))
+SRC_HSC2HS_OPTS_STAGE2 += $(addprefix --cflag=,$(filter-out -O,$(SRC_CC_OPTS) $(CONF_CC_OPTS_STAGE2)))
+SRC_HSC2HS_OPTS_STAGE0 += $(addprefix --lflag=,$(CONF_GCC_LINKER_OPTS_STAGE0))
+SRC_HSC2HS_OPTS_STAGE1 += $(addprefix --lflag=,$(CONF_GCC_LINKER_OPTS_STAGE1))
+SRC_HSC2HS_OPTS_STAGE2 += $(addprefix --lflag=,$(CONF_GCC_LINKER_OPTS_STAGE2))
+SRC_HSC2HS_OPTS_STAGE0 += $(addprefix --cflag=,$(CONF_CPP_OPTS_STAGE0))
+SRC_HSC2HS_OPTS_STAGE1 += $(addprefix --cflag=,$(CONF_CPP_OPTS_STAGE1))
+SRC_HSC2HS_OPTS_STAGE2 += $(addprefix --cflag=,$(CONF_CPP_OPTS_STAGE2))
+SRC_HSC2HS_OPTS_STAGE0 += $(foreach d,$(GMP_INCLUDE_DIRS),-I$(d))
+SRC_HSC2HS_OPTS_STAGE1 += $(foreach d,$(GMP_INCLUDE_DIRS),-I$(d))
+SRC_HSC2HS_OPTS_STAGE2 += $(foreach d,$(GMP_INCLUDE_DIRS),-I$(d))
 ifeq "$(CrossCompiling)" "YES"
-SRC_HSC2HS_OPTS += --cross-compile
+SRC_HSC2HS_OPTS_STAGE0 += --cross-compile
+SRC_HSC2HS_OPTS_STAGE1 += --cross-compile
+SRC_HSC2HS_OPTS_STAGE2 += --cross-compile
 endif
 
 ifeq "$(TARGETPLATFORM)" "i386-unknown-mingw32"
